# composite

./: README.md
qt_glfw_shared_demo/: CMakeLists.txt
qt_glfw_shared_demo/common/: CMakeLists.txt
qt_glfw_shared_demo/common/include/: dmabuf_channel.h  dmabuf_defs.h  ipc_bridge.h  ipc_protocol.h  log.h
qt_glfw_shared_demo/common/src/: dmabuf_channel.cpp  ipc_bridge_linux.cpp
qt_glfw_shared_demo/consumer_glfw/: CMakeLists.txt
qt_glfw_shared_demo/consumer_glfw/src/: compositor.cpp  compositor.h  dmabuf_glfw_receiver.cpp  dmabuf_glfw_receiver.h  egl_dmabuf_import.cpp  egl_dmabuf_import.h  main.cpp  shaders.h  shared_texture_receiver.cpp  shared_texture_receiver.h
qt_glfw_shared_demo/docs/: protocol.md  run_guide.md
qt_glfw_shared_demo/producer_qt/: CMakeLists.txt
qt_glfw_shared_demo/producer_qt/qml/: Main.qml
qt_glfw_shared_demo/producer_qt/src/: dmabuf_qt_publisher.cpp  dmabuf_qt_publisher.h  egl_dmabuf_export.cpp  egl_dmabuf_export.h  main.cpp  qml_offscreen_renderer.cpp  qml_offscreen_renderer.h  shared_texture_publisher.cpp  shared_texture_publisher.h
